Max width image content fix on mobile

--- a/packages/kauri-web/markdown-rendered-css.less
+++ b/packages/kauri-web/markdown-rendered-css.less
@@ -117,6 +117,9 @@
 
   img {
     max-width: 920px;
+    @media (max-width: 500px) {
+      max-width: 100%;
+    }
   }
 
   table {
